@@ -5,6 +5,7 @@ Roundcube Webmail MarkAsJunk2
  * Replace classes .markasjunk2Sel/.markasnotjunk2Sel with .pressed
  * Add Elastic skin support
  * Add markasjunk2_permanently_remove option (#56)
+ * Integration with Swipe plugin
 
 Version 1.11.1 (2017-07-29, rc-1.3)
 =================================================
